...
                                android:textColor="?attr/colorOnPrimaryContainer"
                                tools:text="2" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="課題〆切"
                                android:textAppearance="?attr/textAppearanceLabelLarge"
                                android:textColor="?attr/colorOnPrimaryContainer" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
...
